<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/MenuListData"
        android:icon="@drawable/ic_action_list"
        android:title="@string/MenuListData"
        app:showAsAction="always" />

    <item
        android:id="@+id/MenuAddNew"
        android:icon="@drawable/ic_add_new"
        android:title="@string/MenuItemAdd"
        app:showAsAction="always" />

    <item
        android:id="@+id/Issues"
        android:title="@string/MenuItemIssues"
        app:showAsAction="never" />
</menu>