...
	<string name="EndLabel">Endzeit:</string>
	<string name="StartButton">START</string>
	<string name="EndButton">BEENDEN</string>
	<string name="PauseLabel">Pause:</string>
	<string name="CommentLabel">Kommentar:</string>
	<string name="mnu_list">Auflistung</string>
	<string name="col_start">Start</string>
	<string name="col_end">Ende</string>
	<string name="mnu_add">Hinzufügen</string>
	<string name="mnu_edit">Bearbeiten</string>
	<string name="mnu_export">Export</string>
	<string name="mnu_save">Speichern</string>
	<string name="mnu_cancel">Abbrechen</string>
...
