<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".TimeTrackingActivity">
   <item
      android:id="@+id/action_list"
      android:icon="@drawable/ic_menu_recent_history"
      android:orderInCategory="100"
      android:title="@string/action_list"
      app:showAsAction="always" />
   <item
      android:id="@+id/action_new"
      android:icon="@drawable/ic_menu_add"
      android:orderInCategory="100"
      android:title="@string/action_new"
      app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_web"
        android:title="@string/action_web"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_sensors"
        android:title="Sensoren"
        app:showAsAction="ifRoom" />
</menu>
