<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- Edit -->
    <item
        android:id="@+id/action_edit"
        android:title="@string/action_edit"/>
    <!-- Delete -->
    <item
        android:id="@+id/action_delete"
        android:title="@string/action_delete"/>
</menu>
