...
      android:layout_height="match_parent"
      android:layout_alignParentTop="true"
      android:layout_centerHorizontal="true"
      android:background="#ccc" />

   <TextView
      android:id="@+id/StartTimeColumn"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_alignParentLeft="true"
      android:layout_alignParentStart="true"
      android:layout_alignParentTop="true"
      android:layout_toLeftOf="@+id/CenterHelper"
...
